@@ -1,6 +1,14 @@
 ## Generated data (by ./listplugins.sh)
 
 ##
+## Plugin bsenoise
+##
+bsenoise_la_SOURCES = bsenoise.c
+bsenoise_la_LDFLAGS = -module -avoid-version
+bsenoise_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS += bsenoise.h
+
+##
 ## Plugin greeting
 ##
 greeting_la_SOURCES = greeting.c
@@ -23,6 +31,7 @@ testos_la_LIBADD  = $(plugin_libs)
 
 ## autogenerated plugins:
 plugin_LTLIBRARIES += \
+	bsenoise.la \
 	greeting.la \
 	hello-space.la \
 	testos.la
