@@ -1,0 +1,191 @@
+/* GIMP RGBA C-Source image dump 1-byte-run-length-encoded (noicon.c) */
+
+#define NOICON_WIDTH (64)
+#define NOICON_HEIGHT (64)
+#define NOICON_BYTES_PER_PIXEL (4) /* 3:RGB, 4:RGBA */
+#define NOICON_RLE_PIXEL_DATA ((guint8*) NOICON_rle_pixel_data)
+#define NOICON_RUN_LENGTH_DECODE(image_buf, rle_data, size, bpp) do \
+{ guint __bpp; guint8 *__ip; const guint8 *__il, *__rd; \
+  __bpp = (bpp); __ip = (image_buf); __il = __ip + (size) * __bpp; \
+  __rd = (rle_data); if (__bpp > 3) { /* RGBA */ \
+    while (__ip < __il) { guint __l = *(__rd++); \
+      if (__l & 128) { __l = __l - 128; \
+        do { memcpy (__ip, __rd, 4); __ip += 4; } while (--__l); __rd += 4; \
+      } else { __l *= 4; memcpy (__ip, __rd, __l); \
+               __ip += __l; __rd += __l; } } \
+  } else { /* RGB */ \
+    while (__ip < __il) { guint __l = *(__rd++); \
+      if (__l & 128) { __l = __l - 128; \
+        do { memcpy (__ip, __rd, 3); __ip += 3; } while (--__l); __rd += 3; \
+      } else { __l *= 3; memcpy (__ip, __rd, __l); \
+               __ip += __l; __rd += __l; } } \
+  } } while (0)
+static const guint8 NOICON_rle_pixel_data[4961] =
+("\333\0\0\0\0\10TTT\1QQQ\3JJJ\4AAA\4""555\4%%%\3\27\27\27\2\14\14\14\1\264"
+ "\0\0\0\0\17ccc\1hhh\2fff\6ccc\14aaa\22aaa\27bbb\34bbb\36^^^\34SSS\27BBB\22"
+ "---\14\26\26\26\6\10\10\10\3\2\2\2\1\260\0\0\0\0\22eee\2```\7VVV\20JJJ\35"
+ "???,HHH7___@\204\204\204H\224\224\224K\224\224\224H\201\201\201Annn9MMM.1"
+ "11\40\30\30\30\23\10\10\10\12\2\2\2\3\0\0\0\1\255\0\0\0\0\24^^^\3LLL\13""9"
+ "99\34+++0BBBE\225\225\225X\267\267\267a\311\311\311d\336\336\336g\341\341"
+ "\341i\323\323\323k\264\264\264k\233\233\233h\244\244\244_lllO(((;\23\23\23"
+ "%\4\4\4\22\0\0\0\6\0\0\0\1\252\0\0\0\0\27lll\1ZZZ\5<<<\17$$$&:::C\227\227"
+ "\227Y\324\324\324f\322\322\322i\240\240\240fcccc444c)))g)))nLLLxZZZ\200\206"
+ "\206\206\203\221\221\221\201\221\221\221v???a\7\7\7>\4\4\4\37\2\2\2\14\0\0"
+ "\0\3\251\0\0\0\0\30zzz\4OOO\21)))*SSSJ\305\305\305`\276\276\276ceee[$$$S\30"
+ "\30\30T\32\32\32Y\30\30\30c\26\26\26j\30\30\30o\33\33\33w\33\33\33~\26\26"
+ "\26\205666\217ppp\226\224\224\224\221MMM{\24\24\24T\13\13\13/\4\4\4\22\0\0"
+ "\0\3\247\0\0\0\0\32\237\237\237\1\223\223\223\13ccc&}}}K\303\303\303e\226"
+ "\226\226b&&&O\23\23\23E\23\23\23K\17\17\17Z\12\12\12f\5\5\5l\4\4\4j\5\5\5"
+ "d\10\10\10_\13\13\13_\16\16\16e\12\12\12u\17\17\17\210JJJ\231\215\215\215"
+ "\236OOO\212\36\36\36c\15\15\15""3\3\3\3\22\0\0\0\4\246\0\0\0\0\33\303\303"
+ "\303\5\277\277\277\32\261\261\261F\245\245\245o\304\304\304w222Y\14\14\14"
+ "F\16\16\16L\7\7\7^\2\2\2f\0\0\0a\0\0\0S\0\0\0E\0\0\0""8\0\0\0-\0\0\0*\3\3"
+ "\3-\3\3\3;\10\10\10R\30\30\30rKKK\224\200\200\200\242III\222\34\34\34f\10"
+ "\10\10""1\1\1\1\23\0\0\0\4\244\0\0\0\0\35\253\253\253\1\334\334\334\13\343"
+ "\343\343/\224\224\224lDDD\226\260\260\260\221???p\22\22\22i\23\23\23q\13\13"
+ "\13k\4\4\4T\0\0\0;\0\0\0$\0\0\0\30\0\0\0\20\0\0\0\12\0\0\0\10\0\0\0\11\0\0"
+ "\0\16\17\17\17\32+++5555diii\221\213\213\213\240999\215\25\25\25^\5\5\5""0"
+ "\0\0\0\20\0\0\0\3\243\0\0\0\0\21\256\256\256\3\342\342\342\22\345\345\345"
+ "DPPP\214\27\27\27\272ddd\271rrr\246GGG\243333\232\35\35\35q\16\16\16A\4\4"
+ "\4\36\0\0\0\13\0\0\0\5\0\0\0\2\0\0\0\1\0\0\0\0\202\0\0\0\1\13\30\30\30\5C"
+ "CC\21XXX5[[[n\222\222\222\226kkk\231!!!~\12\12\12R\0\0\0$\0\0\0\11\0\0\0\1"
+ "\242\0\0\0\0\16\244\244\244\4\335\335\335\30\331\331\331S\16\16\16\244\17"
+ "\17\17\326AAA\341\244\244\244\333\237\237\237\331iii\310aaa\221\31\31\31R"
+ "\10\10\10\"\0\0\0\11\0\0\0\3\206\0\0\0\0\12\202\202\202\4\206\206\206\33g"
+ "ggO\246\246\246\206\235\235\235\231...\215\23\23\23p\2\2\2>\0\0\0\25\0\0\0"
+ "\5\242\0\0\0\0\17\210\210\210\4\307\307\307\32\315\315\315Y\11\11\11\256\32"
+ "\32\32\343\\\\\\\366\276\276\276\370\232\232\232\367aaa\356iii\307JJJ\214"
+ "\24\24\24R\2\2\2$\0\0\0\16\0\0\0\4\205\0\0\0\0\13\223\223\223\2\253\253\253"
+ "\21qqq@\252\252\252}\277\277\277\233[[[\220\35\35\35\202\6\6\6^\0\0\0'\0\0"
+ "\0\13\0\0\0\1\241\0\0\0\0\20ccc\4\241\241\241\30\273\273\273S222\246555\341"
+ "\206\206\206\371\315\315\315\375rrr\375;;;\372FFF\347LLL\301\35\35\35\216"
+ "\4\4\4Q\0\0\0&\0\0\0\14\0\0\0\1\204\0\0\0\0\13\247\247\247\2\270\270\270\21"
+ "\177\177\177@\251\251\251\201\335\335\335\241zzz\222$$$\212\10\10\10t\0\0"
+ "\0;\0\0\0\24\0\0\0\3\241\0\0\0\0\20:::\3kkk\22\232\232\232D\221\221\221\224"
+ "iii\325\271\271\271\366\252\252\252\376HHH\376\32\32\32\375\"\"\"\367DDD\345"
+ "\40\40\40\304\4\4\4\203\0\0\0E\0\0\0\30\0\0\0\3\204\0\0\0\0\13\274\274\274"
+ "\3\302\302\302\26\224\224\224I\273\273\273\213\353\353\353\254\220\220\220"
+ "\227)))\220\13\13\13\207\0\0\0Q\0\0\0\36\0\0\0\6\241\0\0\0\0\20\24\24\24\1"
+ "+++\12JJJ,{{{l\262\262\262\262\325\325\325\344uuu\370***\374\11\11\11\375"
+ "\34\34\34\375<<<\370\31\31\31\345\2\2\2\247\0\0\0^\0\0\0#\0\0\0\5\203\0\0"
+ "\0\0\14\246\246\246\1\323\323\323\6\310\310\310!\261\261\261^\330\330\330"
+ "\240\355\355\355\273\212\212\212\237...\230\15\15\15\232\0\0\0g\0\0\0+\0\0"
+ "\0\12\242\0\0\0\0\20\15\15\15\4\27\27\27\27""000D\206\206\206\200\254\254"
+ "\254\276```\344$$$\363\22\22\22\372???\375///\371\16\16\16\350\1\1\1\255\0"
+ "\0\0b\0\0\0$\0\0\0\6\0\0\0\1\202\0\0\0\0\15\305\305\305\2\340\340\340\14\310"
+ "\310\3102\262\262\262w\326\326\326\267\353\353\353\305\210\210\210\246111"
+ "\242\15\15\15\250\0\0\0u\0\0\0""3\0\0\0\14\0\0\0\1\241\0\0\0\0\17\1\1\1\1"
+ "\4\4\4\11\4\4\4\37\30\30\30GDDD\200qqq\267aaa\331EEE\355333\365\26\26\26\362"
+ "\5\5\5\334\0\0\0\236\0\0\0W\0\0\0\37\0\0\0\4\203\0\0\0\0\15\337\337\337\6"
+ "\347\347\347\31\312\312\312M\313\313\313\226\323\323\323\313\341\341\341\317"
+ "\201\201\201\255222\256\15\15\15\266\0\0\0\200\0\0\0:\0\0\0\17\0\0\0\1\242"
+ "\0\0\0\0\16\0\0\0\1\0\0\0\7\3\3\3\27\17\17\17""8\40\40\40i%%%\230\35\35\35"
+ "\275\16\16\16\320\4\4\4\313\1\1\1\260\0\0\0s\0\0\0:\0\0\0\23\0\0\0\2\202\0"
+ "\0\0\0\16\332\332\332\4\357\357\357\22\345\345\3456\317\317\317y\244\244\244"
+ "\274\342\342\342\335\321\321\321\323uuu\267222\277\14\14\14\303\1\1\1\206"
+ "\0\0\0>\0\0\0\17\0\0\0\1\243\0\0\0\0\35\0\0\0\1\1\1\1\5\3\3\3\21\7\7\7-\10"
+ "\10\10P\5\5\5s\1\1\1\211\1\1\1\207\0\0\0o\0\0\0A\0\0\0\35\0\0\0\10\0\0\0\1"
+ "\0\0\0\0\320\320\320\2\357\357\357\16\363\363\363,\311\311\311_\212\212\212"
+ "\245\267\267\267\331\347\347\347\350\270\270\270\323vvv\302...\320\12\12\12"
+ "\313\1\1\1\210\0\0\0>\0\0\0\17\0\0\0\1\245\0\0\0\0\4\0\0\0\3\0\0\0\15\0\0"
+ "\0\36\0\0\0""1\202\0\0\0@\25\0\0\0""1\0\0\0\31\0\0\0\12\0\0\0\2\0\0\0\0\317"
+ "\317\317\3\354\354\354\13\367\367\367&\347\347\347T\205\205\205\220\203\203"
+ "\203\314\322\322\322\354\334\334\334\353\222\222\222\324kkk\317'''\335\7\7"
+ "\7\317\0\0\0\206\0\0\0;\0\0\0\16\0\0\0\1\246\0\0\0\0\3\0\0\0\2\0\0\0\5\0\0"
+ "\0\13\202\0\0\0\20\25\0\0\0\14\0\0\0\5\0\0\0\1\0\0\0\0\326\326\326\4\356\356"
+ "\356\17\370\370\370%\343\343\343U\200\200\200\217ZZZ\303\250\250\250\352\336"
+ "\336\336\365\260\260\260\352ddd\331ZZZ\337\35\35\35\347\5\5\5\312\0\0\0|\0"
+ "\0\0""5\0\0\0\15\0\0\0\1\250\0\0\0\0\204\0\0\0\1\23\0\0\0\0\266\266\266\1"
+ "\332\332\332\4\362\362\362\23\372\372\372.\331\331\331Wrrr\222BBB\305\205"
+ "\205\205\347\327\327\327\367\305\305\305\364rrr\350PPP\343<<<\355\22\22\22"
+ "\352\2\2\2\300\0\0\0n\0\0\0,\0\0\0\12\255\0\0\0\0\23\303\303\303\2\341\341"
+ "\341\7\363\363\363\25\373\373\3735\316\316\316`ZZZ\223777\306rrr\350\302\302"
+ "\302\367\322\322\322\371\204\204\204\361<<<\352ZZZ\355)))\364\12\12\12\345"
+ "\1\1\1\260\0\0\0]\0\0\0\"\0\0\0\7\254\0\0\0\0\24\315\315\315\3\352\352\352"
+ "\15\367\367\367\37\366\366\366=\265\265\265q666\242111\313lll\354\272\272"
+ "\272\371\322\322\322\373\214\214\214\366BBB\360???\360EEE\366\27\27\27\363"
+ "\4\4\4\330\0\0\0\231\0\0\0G\0\0\0\27\0\0\0\4\252\0\0\0\0\26\272\272\272\1"
+ "\333\333\333\6\360\360\360\22\370\370\370.\335\335\335S\214\214\214\200\26"
+ "\26\26\265333\331kkk\360\276\276\276\372\314\314\314\374\211\211\211\371@"
+ "@@\364,,,\364MMM\370'''\371\10\10\10\352\1\1\1\300\0\0\0z\0\0\0""0\0\0\0\16"
+ "\0\0\0\2\251\0\0\0\0\27\275\275\275\1\343\343\343\10\363\363\363\27\372\372"
+ "\3723\304\304\304dQQQ\222\33\33\33\274666\342rrr\363\301\301\301\373\310\310"
+ "\310\374\200\200\200\372@@@\366\40\40\40\366III\371888\373\21\21\21\364\3"
+ "\3\3\325\0\0\0\240\0\0\0X\0\0\0\35\0\0\0\7\0\0\0\1\250\0\0\0\0\27\275\275"
+ "\275\1\343\343\343\7\367\367\367\32\370\370\370=\257\257\257k%%%\244\30\30"
+ "\30\314777\347~~~\370\307\307\307\375\305\305\305\375rrr\372555\370\27\27"
+ "\27\370JJJ\372===\374\31\31\31\370\5\5\5\344\0\0\0\264\0\0\0t\0\0\0""5\0\0"
+ "\0\16\0\0\0\2\250\0\0\0\0\27\270\270\270\1\343\343\343\7\367\367\367\31\357"
+ "\357\357E\202\202\202z\25\25\25\257\35\35\35\334HHH\361\215\215\215\372\313"
+ "\313\313\376\253\253\253\375___\373%%%\371\32\32\32\372HHH\374===\374\30\30"
+ "\30\367\6\6\6\346\1\1\1\275\0\0\0~\0\0\0C\0\0\0\30\0\0\0\4\251\0\0\0\0\27"
+ "\325\325\325\4\362\362\362\22\370\370\3706\216\216\216v\35\35\35\257\34\34"
+ "\34\333OOO\364\233\233\233\374\312\312\312\376\226\226\226\375PPP\373\"\""
+ "\"\372\24\24\24\373EEE\374AAA\375\33\33\33\370\7\7\7\347\1\1\1\304\0\0\0\214"
+ "\0\0\0M\0\0\0\"\0\0\0\11\0\0\0\1\250\0\0\0\0\27\260\260\260\1\347\347\347"
+ "\12\371\371\371$\324\324\324[\40\40\40\246!!!\327KKK\362\244\244\244\375\317"
+ "\317\317\376\222\222\222\375AAA\374\31\31\31\373\22\22\22\374DDD\375???\375"
+ "\35\35\35\371\7\7\7\350\1\1\1\304\0\0\0\222\0\0\0V\0\0\0%\0\0\0\15\0\0\0\2"
+ "\251\0\0\0\0\26\307\307\307\3\360\360\360\25\364\364\364A^^^\210///\317``"
+ "`\360\254\254\254\374\325\325\325\375|||\374777\374\17\17\17\374\34\34\34"
+ "\375QQQ\376666\375\26\26\26\365\6\6\6\345\1\1\1\276\0\0\0\207\0\0\0Q\0\0\0"
+ "$\0\0\0\13\0\0\0\2\252\0\0\0\0\25\322\322\322\6\360\360\360\"\321\321\321"
+ "ZNNN\246fff\344\256\256\256\370\326\326\326\374\177\177\177\373777\373\21"
+ "\21\21\373\40\40\40\375III\376777\375\24\24\24\365\6\6\6\341\1\1\1\275\0\0"
+ "\0\210\0\0\0P\0\0\0'\0\0\0\15\0\0\0\2\252\0\0\0\0\25\225\225\225\1\325\325"
+ "\325\11\346\346\346/\241\241\241qlll\276\253\253\253\357\327\327\327\372\236"
+ "\236\236\372???\370\23\23\23\372(((\374MMM\376222\374\25\25\25\365\4\4\4\340"
+ "\1\1\1\271\0\0\0\207\0\0\0N\0\0\0$\0\0\0\15\0\0\0\3\253\0\0\0\0\24\227\227"
+ "\227\1\316\316\316\16\320\320\320=\232\232\232\206\245\245\245\316\336\336"
+ "\336\363\271\271\271\364```\361'''\364CCC\372JJJ\375%%%\372\16\16\16\357\4"
+ "\4\4\332\0\0\0\256\0\0\0y\0\0\0G\0\0\0\36\0\0\0\12\0\0\0\2\254\0\0\0\0\23"
+ "\223\223\223\2\277\277\277\22\304\304\304F\301\301\301\221\322\322\322\323"
+ "\337\337\337\355\214\214\214\347NNN\347KKK\364BBB\373!!!\370\12\12\12\352"
+ "\2\2\2\320\0\0\0\250\0\0\0p\0\0\0@\0\0\0\35\0\0\0\10\0\0\0\2\255\0\0\0\0\22"
+ "\211\211\211\2\252\252\252\24\240\240\240J\305\305\305\225\354\354\354\322"
+ "\303\303\303\337\202\202\202\326___\340:::\364\32\32\32\365\11\11\11\350\2"
+ "\2\2\305\0\0\0\232\0\0\0j\0\0\0""9\0\0\0\31\0\0\0\11\0\0\0\1\256\0\0\0\0\21"
+ "yyy\2\220\220\220\24~~~J\303\303\303\223\355\355\355\307\263\263\263\307l"
+ "ll\303;;;\333\24\24\24\356\5\5\5\341\1\1\1\277\0\0\0\207\0\0\0V\0\0\0/\0\0"
+ "\0\22\0\0\0\5\0\0\0\1\257\0\0\0\0\17iii\2{{{\22iiiF\302\302\302\212\347\347"
+ "\347\266\242\242\242\255GGG\264\35\35\35\325\5\5\5\335\1\1\1\272\0\0\0\205"
+ "\0\0\0I\0\0\0#\0\0\0\16\0\0\0\3\261\0\0\0\0\16\\\\\\\1mmm\20NNN>\252\252\252"
+ "}\342\342\342\240uuu\226,,,\247\15\15\15\312\1\1\1\301\0\0\0\214\0\0\0Q\0"
+ "\0\0\37\0\0\0\13\0\0\0\3\262\0\0\0\0\15NNN\1ccc\14AAA5\234\234\234m\332\332"
+ "\332\212<<<\202\35\35\35\232\6\6\6\271\0\0\0\233\0\0\0]\0\0\0(\0\0\0\12\0"
+ "\0\0\2\263\0\0\0\0\14???\1XXX\12AAA,\217\217\217^\325\325\325x%%%s\26\26\26"
+ "\212\3\3\3\241\0\0\0v\0\0\0:\0\0\0\22\0\0\0\2\265\0\0\0\0\12EEE\10""777%n"
+ "nnR\315\315\315m!!!k\26\26\26}\4\4\4\213\0\0\0\\\0\0\0&\0\0\0\11\266\0\0\0"
+ "\0\12'''\5!!!\35CCCE\310\310\310c???d\27\27\27r\5\5\5y\0\0\0K\0\0\0\34\0\0"
+ "\0\5\266\0\0\0\0\12\15\15\15\3\13\13\13\23\20\20\20""1\271\271\271OVVVW\26"
+ "\26\26d\5\5\5m\0\0\0D\0\0\0\32\0\0\0\5\266\0\0\0\0\12\12\12\12\1\12\12\12"
+ "\12\6\6\6\35^^^3444A\17\17\17T\3\3\3b\0\0\0E\0\0\0\34\0\0\0\7\267\0\0\0\0"
+ "\11###\3\33\33\33\13\17\17\17\27\7\7\7%\7\7\7>\1\1\1T\0\0\0A\0\0\0\36\0\0"
+ "\0\7\267\0\0\0\0\11mmm\1[[[\4""222\11\10\10\10\23\3\3\3%\0\0\0""7\0\0\0.\0"
+ "\0\0\26\0\0\0\5\266\0\0\0\0\12\261\261\261\2\266\266\266\10\240\240\240\21"
+ "ppp\31***\37\11\11\11#\7\7\7$\2\2\2\31\0\0\0\13\0\0\0\3\265\0\0\0\0\13\304"
+ "\304\304\2\342\342\342\13\345\345\345\37\322\322\3228\302\302\302L\203\203"
+ "\203Q\"\"\"E\5\5\5""1\5\5\5\27\2\2\2\10\0\0\0\1\264\0\0\0\0\15\253\253\253"
+ "\1\340\340\340\10\365\365\365!\322\322\322Pccc\177NNN\236\227\227\227\246"
+ "\302\302\302\224]]]n\16\16\16>\7\7\7\34\2\2\2\13\0\0\0\2\263\0\0\0\0\16\250"
+ "\250\250\3\336\336\336\21\352\352\352<\\\\\\\202\31\31\31\271KKK\332\253\253"
+ "\253\340\331\331\331\322\272\272\272\262EEE}\24\24\24M\5\5\5'\0\0\0\15\0\0"
+ "\0\3\262\0\0\0\0\17\215\215\215\5\304\304\304\31\335\335\335Q!!!\242222\332"
+ "ttt\363\317\317\317\367\261\261\261\357ppp\335eee\271###\215\11\11\11X\0\0"
+ "\0$\0\0\0\13\0\0\0\2\261\0\0\0\0\17YYY\5\211\211\211\34\303\303\303WRRR\253"
+ "sss\341\274\274\274\371\270\270\270\374bbb\370...\362GGG\345***\310\12\12"
+ "\12\224\0\0\0J\0\0\0\33\0\0\0\6\261\0\0\0\0\17(((\4EEE\26bbbG\241\241\241"
+ "\226\301\301\301\320\322\322\322\356rrr\367+++\370\15\15\15\371>>>\367$$$"
+ "\346\10\10\10\272\0\0\0g\0\0\0)\0\0\0\12\261\0\0\0\0\20\14\14\14\2\30\30\30"
+ "\14'''.wwwl\314\314\314\247\250\250\250\323KKK\353\27\27\27\365///\373;;;"
+ "\373\26\26\26\356\4\4\4\305\0\0\0r\0\0\0/\0\0\0\14\0\0\0\1\261\0\0\0\0\16"
+ "\4\4\4\5\6\6\6\24\15\15\15""8===i\221\221\221\234fff\313TTT\345???\363\34"
+ "\34\34\363\10\10\10\344\1\1\1\271\0\0\0h\0\0\0*\0\0\0\12\262\0\0\0\0\16\0"
+ "\0\0\1\0\0\0\5\1\1\1\22\12\12\12+\31\31\31U&&&\215###\266\26\26\26\316\6\6"
+ "\6\321\1\1\1\275\0\0\0\217\0\0\0I\0\0\0\33\0\0\0\6\264\0\0\0\0\14\0\0\0\4"
+ "\3\3\3\15\7\7\7#\12\12\12J\10\10\10p\4\4\4\214\1\1\1\221\0\0\0}\0\0\0W\0\0"
+ "\0(\0\0\0\15\0\0\0\2\265\0\0\0\0\12\0\0\0\2\0\0\0\11\0\0\0\32\0\0\0""0\0\0"
+ "\0A\0\0\0F\0\0\0""9\0\0\0$\0\0\0\15\0\0\0\4\267\0\0\0\0\10\0\0\0\1\0\0\0\4"
+ "\0\0\0\12\0\0\0\17\0\0\0\21\0\0\0\15\0\0\0\7\0\0\0\2\272\0\0\0\0\1\0\0\0\1"
+ "\202\0\0\0\2\202\0\0\0\1\377\0\0\0\0\241\0\0\0\0");
+
